Teeny tiny change to css for better chat linebreaking, to prevent scrollbars.

--- a/static/css/my.css
+++ b/static/css/my.css
@@ -167,7 +167,7 @@
 }
 .media-body {
     font-size: 0.9em;
-    overflow: auto;
+    word-wrap: break-word;
     border-top: 1px solid rgba(100, 100, 100, 0.5);
     padding-top: 4px;
 }
